--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Image Section -->
   <section>
     <h2>Our Team</h2>
-    <img src="image/galaxy.jpg" alt="galaxy pic">
+    <img src="galaxy.jpg" alt="galaxy pic">
   </section>
 
   <!-- Services Section -->
